Fixed vertical alignment of cards, added IHG.

--- a/css/index.css
+++ b/css/index.css
@@ -1,7 +1,27 @@
+/*======================*/
+/*---| Page Layout |--- */
+/*======================*/
+
 #cardContainer
 {
+	height: 100%;
 	display: block;
 	text-align: center;
+}
+
+/*================*/
+/*---| Cards |--- */
+/*================*/
+
+.card
+{
+	display: inline-block;
+	border-radius: 20px;
+	width: 300px;
+	height: 180px;
+	margin: 15px;
+	text-align: center;
+	vertical-align: top;
 }
 
 #marriottCard
@@ -19,11 +39,22 @@
 	background-color: #006643;
 }
 
+#ihgCard
+{
+	background-color: #d9682e;
+}
+
+/*===============*/
+/*---| Logos |---*/
+/*===============*/
+
 .logoContainer
 {
 	width: 0px;
 	height: 60px;
+	width: 80px;
 	margin: 25px 0% 0% 30px;
+	text-align: left;
 }
 
 .logoImage
@@ -31,12 +62,8 @@
 	height: 100%;
 }
 
-.card
+.wideLogoImage
 {
-	display: inline-block;
-	border-radius: 20px;
-	width: 300px;
-	height: 180px;
-	margin: 15px;
-	text-align: center;
+	padding-top: 5px;
+	width: 100%;
 }
